# AI_Projects

./: README.md
AI Agent Calculator/: main.py  pyproject.toml
AI Image_Classifier/: main.py
AI Resume Analyser/: main.py  pyproject.toml
