[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "tensorflow>=2.19.0",
]
